--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -16,5 +16,5 @@ jobs:
           password: ${{ secrets.PASSWORD }}
           port: ${{ secrets.PORT }}
           script: |
-              cd cmsc389T-web-template
+              cd /pub/azhang25/cmsc389T-web-template
               git pull
