--- a/.github/workflows/clone.yml
+++ b/.github/workflows/clone.yml
@@ -16,4 +16,4 @@ jobs:
           script: |
               touch ~/.ssh/known_hosts
               ssh-keyscan -H github.com >> ~/.ssh/known_hosts
-              git clone git@github.com/azhang-github/cmsc389T-web-template.git
+              git clone https://github.com/azhang-github/cmsc389T-web-template.git
