--- a/.github/workflows/clone.yml
+++ b/.github/workflows/clone.yml
@@ -16,4 +16,5 @@ jobs:
           script: |
               touch ~/.ssh/known_hosts
               ssh-keyscan -H github.com >> ~/.ssh/known_hosts
+              cd /pub/azhang25
               git clone https://github.com/azhang-github/cmsc389T-web-template.git
